# prestashop-mcp

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  pyproject.toml  requirements.txt
npx/: README.md  package.json  wrapper.js
src/: __init__.py
src/prestashop_mcp/: __init__.py  cli.py  config.py  prestashop_client.py  prestashop_mcp_server.py
tests/: README.md  __init__.py  requirements.txt  test_config.py  test_crud_operations.py  test_extended_functionality.py
