[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prestashop-mcp"
version = "2.0.0"
description = "Professional Model Context Protocol server for complete PrestaShop e-commerce management with unified product API"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "PrestaShop MCP Team"}
]
keywords = [
    "prestashop", "mcp", "model-context-protocol", "ecommerce", "api", 
    "shop-management", "business-intelligence", "automation", "unified-api"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Office/Business :: Financial :: Point-Of-Sale",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.5.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.8.0",
]

[project.urls]
"Homepage" = "https://github.com/latinogino/prestashop-mcp"
"Bug Reports" = "https://github.com/latinogino/prestashop-mcp/issues"
"Source" = "https://github.com/latinogino/prestashop-mcp"
"Documentation" = "https://github.com/latinogino/prestashop-mcp#readme"

[project.scripts]
prestashop-mcp = "prestashop_mcp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=src/prestashop_mcp"

[tool.coverage.run]
source = ["src/prestashop_mcp"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true
precision = 2